--- a/templates/invoices/index.html
+++ b/templates/invoices/index.html
@@ -115,7 +115,7 @@
                                     <a href="{{ url_for('invoice.show_invoice', invoice_id=invoice.id) }}" class="btn btn-info" title="عرض التفاصيل">
                                         <i class="fas fa-eye"></i>
                                     </a>
-                                    {% if current_user.role == 'admin' %}
+                                    {% if current_user.role in ['admin', 'sub-admin'] %}
                                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteInvoiceModal-{{ invoice.id }}" title="حذف المستخلص">
                                         <i class="fas fa-trash"></i>
                                     </button>
