--- a/templates/items/edit.html
+++ b/templates/items/edit.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                     {% if current_user.role == 'admin' %}
+                     {% if current_user.role in ['admin', 'sub-admin'] %}
                     <div class="row">
                         <div class="col-6 mb-3">
                             {{ form.contract_quantity.label(class="form-label") }}
