--- a/templates/items/index.html
+++ b/templates/items/index.html
@@ -83,13 +83,13 @@
                                 <th style="width: 3%;"><input class="form-check-input" type="checkbox" id="select-all"></th>
                                 <th>رقم البند</th>
                                 <th>الوصف</th>
-                                {% if current_user.role == 'admin' %}
+                                {% if current_user.role in ['admin', 'sub-admin'] %}
                                 <th>التكلفة التعاقدية</th>
                                 {% endif %}
                                 <th>التكلفة الفعلية</th>
                                 <th>إجمالي المدفوعات</th>
                                 <th>المبلغ المتبقي</th>
-                                {% if current_user.role == 'admin' %}
+                                {% if current_user.role in ['admin', 'sub-admin'] %}
                                 <th>الوفر / الزيادة</th>
                                 {% endif %}
                                 <th>الحالة</th>
@@ -102,13 +102,13 @@
                                 <td><input class="form-check-input item-checkbox" type="checkbox" name="item_ids" value="{{ item.id }}"></td>
                                 <td>{{ item.item_number }}</td>
                                 <td>{{ item.description }}</td>
-                                {% if current_user.role == 'admin' %}
+                                {% if current_user.role in ['admin', 'sub-admin'] %}
                                 <td>{{ "{:,.2f}".format(item.contract_total_cost) }}</td>
                                 {% endif %}
                                 <td>{{ "{:,.2f}".format(item.actual_total_cost) }}</td>
                                 <td><span class="text-info">{{ "{:,.2f}".format(item.paid_amount) }}</span></td>
                                 <td><span class="text-danger">{{ "{:,.2f}".format(item.remaining_amount) }}</span></td>
-                                {% if current_user.role == 'admin' %}
+                                {% if current_user.role in ['admin', 'sub-admin'] %}
                                 <td>
                                     <span class="{{ 'text-success' if item.cost_variance >= 0 else 'text-danger' }}">
                                         {{ "{:,.2f}".format(item.cost_variance) }}
@@ -126,7 +126,7 @@
                                             <i class="fas fa-money-bill-wave"></i>
                                         </button>
                                         <a href="{{ url_for("item.edit_item", item_id=item.id) }}" class="btn btn-warning" title="تعديل"><i class="fas fa-edit"></i></a>
-                                        {% if current_user.role == 'admin' %}
+                                        {% if current_user.role in ['admin', 'sub-admin'] %}
                                         <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteItemModal-{{ item.id }}" title="حذف"><i class="fas fa-trash"></i></button>
                                         {% endif %}
                                     </div>
@@ -239,4 +239,3 @@
 </div>
 
 {% endblock %}
-
